Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ExceptionalFinally2.out
ExceptionalFinally2.java:22:11: compiler.err.except.never.thrown.in.try: ExceptionalFinally2.E
1 error
